Andon (09/Feb/02)
------------------

Bug fixes:
 + Fixed the change to getZoneName that would cause g++ to puke
   when comparing its return to a const char*


Andon (09/Feb/02)
------------------

Additions:
 + Added the ability to toggle a few DEBUG features on or off
   at runtime... They are:
     - Log unknown packets to stdout
     - Log unknown packets to a file
     - Enable experimental code
     - Show out of order packets

    * More to come later


Andon (08/Feb/02)
------------------

Bug fixes (Me):
 + CapnBry's mob delta position prediction has been disabled
   by default now.. For testing purposes, it can still be
   enabled by removing the #undef ALPHA_QUALITY in excalibur.h

Additions (Snowblind):
 + Enhanced the status bar.. Displays zone name now

Additions (Snowblind):
 + Enhanced the status bar.. It's MUCH nicer now than it was.

Additions (CapnBry):
 + Added range circles to the map
 + Added --dumpunknown to the command line switches
 + Added projection of mob / player positions to aproximate current location
   based on heading and speed.
 + Added support for "Stop mob movement" stream.

Additions (Me):
 + Added a '--help' command line switch.
 + Added a GUI element in the preferences to toggle range
   circles on and off at run-time.
 + Added distance fading agro circles.. The intensity of the
   R channel in the RGB color now changes depending upon your
   distance from the mob.
 + Added a GUI element in the preferences to toggle agro
   distance fading.

Bug fixes (CapnBry):
 + Changed the range circles to be dark grey, so that they
   actually show up now.

Bug fixes (Me):
 + Added an experimental fix for the QT_NETWORK_MODULE issues
   experienced at compile time. The method I used for this is
   questionable at best.


Andon (07/Feb/02)
------------------

Documentation:
 + Fixed a lingering issue with the CVS commandline listed in
   INSTALL


Andon (07/Feb/02)
------------------

Additions: